manifests/base/traefik/cloudflare-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cloudflare
spec:
  plugin:
    cloudflare:
      trustedCIDRs: []
      overwriteRequestHeader: true
